# estudo-sdl2

./: .clangd  CMakeLists.txt  README.md  ex  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/opengl/: main.cpp
